package org.baeldung.di.constructor;

public class DocumentReader {

}
