package org.baeldung.di.constructor;

public class DocumentWriter {

}
