@startuml
'https://plantuml.com/class-diagram
hide empty attributes
skinparam Handwritten false
skinparam ClassBorderColor black
skinparam BackgroundColor #fffce8/#f8f9fa
skinparam class {
 ArrowColor SeaGreen
 BackgroundColor #fffce8
}

class DataLoaderService {
  +load()
}
interface DocumentReader {
  +get()
}
class PagePdfDocumentReader {
  +get()
}
interface VectorStore {
  +accept()
  +delete()
  +similaritySearch()
}
interface DocumentWriter {
  +accept()
}
class RedisVectorStore {
  +accept()
  +delete()
  +similaritySearch()
}
DataLoaderService --> PagePdfDocumentReader: uses
DataLoaderService --> VectorStore: uses
PagePdfDocumentReader --|> DocumentReader: implements
RedisVectorStore -up-|> VectorStore: implements
VectorStore -up-> DocumentWriter: extends

@enduml